# MuLoom-2

./: .gitignore  LICENSE  MuLoom-2_Instruction_Spec_Detailed.md  README.md  muloom2_sync_spec_2025-10-26.md  muloom_a_plan_impl_spec_ja.md  package-lock.json  package.json  pyproject.toml
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src-tauri/src/plugins/: mod.rs  muloom_gpu.rs
app/ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/ui/src/: App.css  App.tsx  index.css
app/ui/src/components/: CodeEditor.css  CodeEditor.tsx  FallbackLayers.tsx
docs/: api-openapi.yaml
engine/: __init__.py  main.py  pipeline.py  timeline.py
engine/api/: __init__.py  schemas.py  server.py  state.py
engine/audio/: __init__.py  beat_aubio.py  beat_essentia.py  taps.py
engine/configs/: mappings_isf.yaml  profiles.yaml
engine/graph/: __init__.py  codecs.py  isf_loader.py  mixers.py  outputs.py  panic.py  shaders.py  sources.py
engine/ndi/: __init__.py  ndi_in.py  ndi_out.py
engine/pregen/: __init__.py  generators.py  prerender.py
engine/rtc/: __init__.py  preview_branch.py  webrtc.py
engine/runtime/: __init__.py  gst_adapter.py
engine/utils/: __init__.py  assets.py  gst.py  logging.py  osx.py
scripts/: demo_gst_adapter.py  dev_run.sh  gs_env.sh  gst_inspect_check.sh  hap_transcode_examples.sh
scripts/env.d/: gstreamer_env.sh
tests/: conftest.py  test_codecs.py  test_isf_loader.py  test_panic.py  test_rtc.py  test_runtime_adapter.py  test_timeline.py
(+22 files in other folders)
