[project]
name = "muloom-engine"
version = "0.1.0"
description = "MuLoom render engine (A-plan scaffolding)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "pydantic>=2.9.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
